test/errors/auxiliary/bad-base.jade
!!!
html
  head
    meta(charset="utf-8")
    block head
  body
    header
      .lorem
      .ipsum
    if (1 == true): #fault
    #content
      block content
    footer
      .dolor
      .sit
      .amet
